--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+pandas = "*"
+pmaw = "*"
+requests = "*"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "*"
